<resources>
    <string name="app_name">MyCredit</string>
    <string name="my_credit">Мой\nкредит</string>
    <string name="credit">Кредит</string>
    <string name="skip">Пропустить</string>
    <string name="finish">Завершить</string>
    <string name="onboarding_1_header">20 мин</string>
    <string name="onboarding_1_text">Быстрое решение\nДля Вас!</string>
    <string name="onboarding_2_header">24/7</string>
    <string name="onboarding_2_text">онлайн заявки на кредит\nкруглосуточно</string>
    <string name="onboarding_3_header">0%</string>
    <string name="onboarding_3_text">беспроцентный\nкредит</string>
    <string name="sign_in">Войти</string>
    <string name="sign_up">Регистрация</string>
    <string name="to_sign_up">Зарегистрируйтесь</string>
    <string name="login">Логин</string>
    <string name="delete">Удалить</string>
    <string name="password">Пароль</string>
    <string name="edit_password">Изменить пароль</string>
    <string name="select">Выбрать</string>
    <string name="exit_confirmation">Вы действительно хотите покинуть этот экран?</string>
    <string name="still_do_not_have_an_account">Все еще нет аккаунта? %s</string>
    <string name="choose_sum_and_term">Выберите сумму и срок кредита</string>
    <string name="choose_birth_day">Выберите дату рождения</string>
    <string name="choose_passport_issued_date">Выберите дату выдачи паспорта</string>
    <string name="specify_mobile">Ваш мобильный телефон</string>
    <string name="you_have_already_registered">Вы уже зарегистрированы в MyCredit!</string>
    <string name="sing_in_to_cabinet">Войти в Личный кабинет</string>
    <string name="enter_sms_code">Введите код из СМС</string>
    <string name="go_over">Перейти</string>
    <string name="borrow">Занимаете:</string>
    <string name="percent">Процент:</string>
    <string name="give">Отдаете:</string>
    <string name="specific_uah">%1$s грн</string>
    <string name="specific_uah_d">%d грн</string>
    <string name="specific_uah_f">%.0f грн</string>
    <string name="specific_uah_f_pennies">%.2f грн</string>
    <string name="uah">грн</string>
    <string name="discount_pattern">Скидка - %.2f%%</string>
    <string name="do_you_have_promocode">У Вас есть промокод?</string>
    <string name="log_in_before_promocode">Для ввода промокода Вам необходимо войти в личный кабинет или зарегистрироваться</string>
    <string name="complete_sign_up_before_promocode">Для ввода промокода Вам необходимо завершить регистрацию</string>
    <string name="get_credit">Получить кредит</string>
    <string name="login_or_get_credit">Войти / Получить кредит</string>
    <string name="change_conditions">Изменить условия</string>
    <string name="enter_promocode">Введите промокод</string>
    <string name="note">Примечание</string>
    <string name="money_restriction_note">В данный момент Вам доступно %1$d грн, данная сумма будет расти с каждым кредитом.</string>
    <string name="days_restriction_note">Максимальное количество дней - %1$d. Вы можете продлить кредит из личного кабинета.</string>
    <string name="display_next_time">Отображать в следующий раз?</string>
    <string name="passport">Паспорт</string>
    <string name="old_sample">Старого образца</string>
    <string name="new_sample">ID-карта</string>
    <string name="repay_loan_title">Погасить кредит</string>
    <string name="my_credit_one_line">MyCredit</string>
    <string name="name_not_specified">(имя не указано)</string>
    <string name="greeting_pattern">Приветствуем, %s</string>
    <string name="please_wait">Пожалуйста подождите</string>
    <string name="viber_link">viber://pa?chatURI=mycredittest</string>
    <string name="viber_play_market_link">https://play.google.com/store/apps/details?id=com.viber.voip</string>
    <string name="telegram_link">https://telegram.me/MyCrerdit_bot</string>
    <string name="facebook_link">https://www.messenger.com/t/MyCreditua</string>
    <string name="you_do_not_have_credits">Пока что у вас нет кредитов.\nВозьмите кредит для открытия этого раздела.</string>
    <string name="cancel">Отмена</string>
    <string name="next">Далее</string>
    <string name="confirm">Подтвердить</string>
    <string name="loading">Загрузка…</string>
    <string name="forgot_password">Забыли пароль?</string>
    <string name="enter_other_number">Ввести другой номер</string>
    <string name="resend">Отправить ещё раз</string>
    <string name="resend_after">Отправить ещё раз (через %d сек.)</string>
    <string name="receive_sms">Получить СМС c кодом</string>
    <string name="password_resetting">Восстановление пароля</string>
    <string name="minutes_left">Осталось: &lt; %1$s мин</string>
    <string name="enter_your_data">Введите Ваши данные</string>
    <string name="passport_data">Паспортные данные</string>
    <string name="personal_information">Личные сведения</string>
    <string name="finance_info">Данные о ваших доходах / расходах</string>
    <string name="result">Итог</string>
    <string name="scan">Сканировать</string>
    <string name="pick_missing_scans_option">Выбрать</string>
    <string name="main_data">Основные данные</string>
    <string name="address">Адрес</string>
    <string name="finance">Финансы</string>
    <string name="addresses">Адрес проживания</string>
    <string name="register_addresses">Адрес регистрации</string>
    <string name="not_specified">Не указано</string>
    <string name="choose_credit">Получить кредит</string>
    <string name="read_contract">Ознакомиться с договором</string>
    <string name="phone_number_exists">Данный номер уже зарегистрирован в нашей системе.</string>
    <string name="email">Email</string>
    <string name="invent_password">Придумайте пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="dayCount1">%1$d день</string>
    <string name="dayCount2_4">%1$d дня</string>
    <string name="dayCount5_0">%1$d дней</string>
    <string name="until_day_month">до %1$d %2$s</string>
    <string name="until">до %s</string>
    <string name="good">Хорошо</string>
    <string name="live_in_residence">Живу по месту прописки</string>
    <string name="address_search">Поиск адреса</string>
    <string name="email_with_facebook">Привязать Facebook к аккаунту</string>
    <string name="facebook_desc">Мы не публикуем записи в Facebook без разрешения. Добавьте Email через FB и <b>увеличьте вероятность получения кредита.</b></string>
    <string name="data_process_allowed">Даю согласие на обработку моих данных телекомуникационными операторами</string>
    <string name="get_news_from_my_credit">Получать информацию о новостях и акциях в MyCredit</string>
    <string name="rules_agreed_clickable_fragment">правилами предоставления кредитов</string>
    <string name="position">Должность</string>
    <string name="company_name">Название компании</string>
    <string name="activity_kind">Вид деятельности</string>
    <string name="work_phone">Телефон компании</string>
    <string name="work_experience">Стаж работы</string>
    <string name="monthly_income">Месячный доход (грн)</string>
    <string name="income_main_source">Источник дохода</string>
    <string name="school_name">Учебное заведение</string>
    <string name="faculty_spec">Факультет</string>
    <string name="education_degree">Степень</string>
    <string name="student_id">Студ. билет</string>
    <string name="family_expenses">Расходы на семью</string>
    <string name="payments_amount_on_loans">Сумма по кредитам</string>
    <string name="loan_purpose">Цель займа</string>
    <string name="dismissalReason">Причина увольнения</string>
    <string name="group_disability">Группа инвалидности</string>
    <string name="card_holder">Владелец карты</string>
    <string name="expires_end">Срок действия</string>
    <string name="cvv">СVV2/CVC:</string>
    <string-array name="password_requirements">

        <item>6 и более символов</item>
        <item>Прописные и строчные буквы</item>
        <item>Хотя бы одна цифра</item>

    </string-array>
    <string name="save">Сохранить</string>
    <string name="security_guarantee">Гарантия\nбезопасности\nданных</string>
    <string name="marital_status">Семейное положение</string>
    <string name="education">Образование</string>
    <string name="number_pattern">№%1$d</string>
    <string name="string_number_pattern">№%s</string>
    <string name="fraction_pattern">%s/%s</string>
    <string name="occupation">Занятость</string>
    <string name="occupation_type">Тип занятости</string>
    <string name="occupation_type_working">Работаю</string>
    <string name="occupation_type_businessman">Предприниматель</string>
    <string name="occupation_type_not_working">Не работаю</string>
    <string name="occupation_type_student">Студент</string>
    <string name="occupation_type_pensioner">Пенсионер</string>
    <string name="occupation_type_invalid">Инвалид</string>
    <string name="occupation_type_housewife">Домохозяйка / Домохозяин</string>
    <string name="occupation_type_decree">Декрет</string>
    <string name="occupation_type_temporarily_not_working">Временно не работаю</string>
    <string name="amount">Сумма</string>
    <string name="prefer_amount">Сумма выплаты на данный момент</string>
    <string name="loan_creation_date">Дата выдачи</string>
    <string name="loan_current_debt">Сумма к возврату</string>
    <string name="loan_term">На срок</string>
    <string name="loan_amount">Сумма кредита</string>
    <string name="total_debt_amount">Сумма общего долга</string>
    <string name="next_payment_amount">Сумма след. платежа</string>
    <string name="add_card">Добавить карту</string>
    <string name="how_to_verify_card">Как подтвердить карту?</string>
    <string name="how_to_verify_card_tutorial"><![CDATA[Для подтверждения Вашей карты, на ней <font color=#000000><b>временно</b></font> будет заблокирована сумма, в размере <font color=#000000><b>1 грн.</b></font><br><br>Введите в специальное поле проверочный код, который придет в смс от Вашего банка.<br><font color=#000000><b>Не приходит смс с кодом?</b></font> Обратитесь в поддержку Вашего банка.]]></string>
    <string name="phone_support">0 800 214 111</string>
    <string name="phone_support_lifecell">073 369 41 11</string>
    <string name="phone_support_kyivstar">067 369 41 11</string>
    <string name="phone_support_vodafone">050 369 41 11</string>
    <string name="error_personal_data_uneditable">На данный момент поля недоступны для редактирования, обратитесь пожалуйста в службу поддержки:</string>
    <string name="payout_appointment">Назначение платежа</string>
    <string name="sum">Сумма</string>
    <string name="my_credit_bank_account">№26504052600258</string>
    <string name="account">Счет</string>
    <string name="my_credit_mfo">320649</string>
    <string name="mfo">МФО</string>
    <string name="privat_bank">ПАО КБ \'ПриватБанк\'</string>
    <string name="bank">Банк</string>
    <string name="my_credit_egrpou">39861924</string>
    <string name="ergpou">ЕРГПОУ</string>
    <string name="my_credit_ooo_name">OOO “1 Безопасное Агенство \nНеобходимых кредитов”</string>
    <string name="receiver">Получатель</string>
    <string name="bank_fragment_top_text">Просто распечатайте или запишите данные платежа и обратитесь в кассу любого из вышеуказанных банков</string>
    <string name="bank_offices_info">Погасить кредит полностью или частично  \nможно в отделениях следующих банков:</string>
    <string name="privatBank">ПриватБанк</string>
    <string name="prominvest">Проминвестбанк</string>
    <string name="bank_aval">Райффайзен банк Аваль</string>
    <string name="ukr_bank">Укрэкзимбанк</string>
    <string name="sberbank">Сбербанк России</string>
    <string name="alfa_bank">Альфа-банк</string>
    <string name="oshad_bank">Ощадбанк</string>
    <string name="ukr_soc_bank">Укрсоцбанк</string>
    <string name="vtb_bank">ВТБ банк</string>
</resources>